--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>DS Science Academy</title>
 
-    <!-- Bootstrap core CSS -->
+    <!-- Bootstrap core CSs -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Custom fonts for this template -->
@@ -327,3 +327,5 @@
     <script src="js/grayscale.min.js"></script>
   </body>
 </html>
+
+<!-- doc end -->
